# kryor-trade-engine

./: .env.example  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
config/: prometheus.yml
config/grafana/dashboards/: kryor-trade-engine.json
config/grafana/provisioning/dashboards/: default.yml
config/grafana/provisioning/datasources/: prometheus.yml
deploy/: inventory.ini  site.yml  vars.yml
deploy/roles/common/tasks/: main.yml
deploy/roles/docker/tasks/: main.yml
deploy/roles/engine/handlers/: main.yml
deploy/roles/engine/tasks/: main.yml
deploy/roles/engine/templates/: env.j2  kryor-engine.service.j2
docs/: ARCHITECTURE.md  LEARNING.md  MODULES.md  OPERATIONS.md  README.md
scripts/: fetch_historical.py  run_backtest.py  run_paper_trade.py  train_model.py
src/kryor/adapters/alpaca/: __init__.py  config.py  constants.py  data.py  execution.py  factories.py  history.py  providers.py
src/kryor/api/: control.py
src/kryor/core/: __init__.py  custom_data.py  events.py  models.py  portfolio_config.py  settings.py
src/kryor/data/: fetcher.py  indicators.py  questdb_writer.py  store.py
src/kryor/ml/: features.py  predictor.py  trainer.py
src/kryor/monitoring/: alerts.py  metrics_actor.py
src/kryor/regime/: hmm.py  hmm_backtest.py
src/kryor/risk/: circuit_breaker.py
src/kryor/strategy/: mean_reversion.py  ml_signal.py  momentum.py
tests/: test_models.py
