[project]
name = "kryor-trade-engine"
version = "0.1.0"
description = "Studio Kryor — Small-capital short/mid-term trading system"
requires-python = ">=3.11"
dependencies = [
    # Core Framework
    "nautilus_trader>=1.225.0",
    # Data
    "yfinance>=0.2.0",
    "pandas>=2.0.0",
    "pandas-ta>=0.3.14b1",
    # Alpaca
    "alpaca-py>=0.33.0",
    # ML
    "lightgbm>=4.0.0",
    "scikit-learn>=1.5.0",
    "optuna>=4.0.0",
    "hmmlearn>=0.3.0",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    # Monitoring
    "prometheus-client>=0.20.0",
    "discord-webhook>=1.3.0",
    "loguru>=0.7.0",
    # Scheduling
    "apscheduler>=3.10.0",
    # API
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    # Utils
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kryor"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
